--- a/css/index.css
+++ b/css/index.css
@@ -3,28 +3,21 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
   height: 100vh;
-  /* ซ้อนเนื้อหา */
   overflow: hidden;
   display: flex;
-  /* จัดรูปตรงกลาง */
   justify-content: center;
   align-items: center;
   flex-direction: column;
   position: relative;
   font-family: sans-serif;
 }
-
-/* วิดีโอพื้นหลังเต็มจอ */
-
 .button-container {
   display: flex;
   gap: 50px;
   z-index: 1;
 }
-
 .btn {
   padding: 100px 100px;
   font-size: 16vh;
@@ -37,13 +30,11 @@ body {
   text-decoration: none;
   backdrop-filter: blur(5px);
   background-color: transparent;
-
-  span {
-    display: inline-block;
-    font-size: 4rem;
-  }
 }
-
+.btn span {
+  display: inline-block;
+  font-size: 4rem;
+}
 .btn2 {
   padding: 100px 100px;
   font-size: 16vh;
@@ -56,13 +47,11 @@ body {
   text-decoration: none;
   backdrop-filter: blur(5px);
   background-color: transparent;
-
-  span {
-    display: inline-block;
-    font-size: 4rem;
-  }
 }
-
+.btn2 span {
+  display: inline-block;
+  font-size: 4rem;
+}
 .btn:hover {
   background-color: rgb(85, 85, 206);
   transform: scale(1.1);
@@ -81,6 +70,6 @@ body {
   height: 100%;
   object-fit: cover;
   z-index: -1;
-  filter: blur(1vh); /* 👈 เบลอวิดีโอ */
-  transform: scale(1.05); /* ขยายเล็กน้อยเพื่อไม่ให้เห็นขอบเบลอ */
+  filter: blur(1vh);
+  transform: scale(1.05);
 }
